<resources>
    <string name="app_name">SmartAir</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="overview">Vista general</string>
    <string name="planes">Planos</string>
    <string name="configuration">Configuración</string>
    <string name="consumption">Consumo</string>
    <string name="suggestions">Sugerencias</string>
    <string name="about">Acerca De</string>
    <string name="ar">Realidad Aumentada</string>

    <string-array name="homeCat">
        <item>General</item>
        <item>Salón</item>
        <item>Cocina</item>
        <item>Estudio</item>
        <item>Dormitorio pequeño</item>
        <item>Dormitorio grande</item>
        <item>Baño pequeño</item>
        <item>Baño grande</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="outside_conditions">Condiciones exteriores</string>
    <string name="activate_system">Activar sistema</string>
    <string name="activate_automatic">Activar funcionamiento automático (recomendado)</string>
    <string name="allow_manual">Permitir configuración manual de estáncias</string>
    <string name="set_temp">Fijar temperatura personalizada</string>
    <string name="allow_manual_temp">Permitir temperatura personalizada</string>
</resources>
