<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu1"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_home"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_planes"
            android:icon="@drawable/ic_layers"
            android:title="@string/planes" />
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_configuration"
            android:title="@string/configuration" />
    </group>
    <group
        android:id="@+id/menu2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_consumption"
            android:icon="@drawable/ic_data_usage"
            android:title="@string/consumption" />
        <item
            android:id="@+id/nav_suggestions"
            android:icon="@drawable/ic_check_circle"
            android:title="@string/suggestions" />
    </group>

</menu>
